--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "2.6"
+}
+
+
 task wrapper(type: Wrapper) {
     gradleVersion = '4.7'
 }
